--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday Countdown</title>
@@ -49,5 +50,6 @@
       }
     }, 1000);
   </script>
+  <script src="script.js"></script>
 </body>
 </html>
