--- a/Page2.html
+++ b/Page2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday</title>
@@ -50,5 +51,6 @@
   <div class="cake">🎂</div>
   <p>You are the beat of my heart<br>Many many happy returns of the day</p>
   <button onclick="window.location.href='page3.html'">Click Here</button>
+  <script src="script.js"></script>
 </body>
 </html>
