--- a/Page3.html
+++ b/Page3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Dearest Love</title>
@@ -63,5 +64,6 @@
     <p>Forever Yours,<br>💖 [Your Name]</p>
     <button onclick="window.location.href='page4.html'">Click Here</button>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
