--- a/Page4.html
+++ b/Page4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hall of Memories</title>
@@ -63,5 +64,6 @@
     <img src="images/photo8.jpg" alt="Memory 8">
   </div>
   <button onclick="window.location.href='index.html'">Start Again</button>
+  <script src="script.js"></script>
 </body>
 </html>
