--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       if (count < 0) {
         clearInterval(timer);
         // Go to next page
-        window.location.href = "page2.html"; 
+        window.location.href = "Page2.html"; 
       }
     }, 1000);
   </script>
