--- a/page4.html
+++ b/page4.html
@@ -54,14 +54,14 @@
 <body>
   <h2>The Hall of Memories 💕</h2>
   <div class="gallery">
-    <img src="images/photo1.jpg" alt="Memory 1">
-    <img src="images/photo2.jpg" alt="Memory 2">
-    <img src="images/photo3.jpg" alt="Memory 3">
-    <img src="images/photo4.jpg" alt="Memory 4">
-    <img src="images/photo5.jpg" alt="Memory 5">
-    <img src="images/photo6.jpg" alt="Memory 6">
-    <img src="images/photo7.jpg" alt="Memory 7">
-    <img src="images/photo8.jpg" alt="Memory 8">
+    <img src="photo1.jpg" alt="Memory 1">
+    <img src="photo2.jpg" alt="Memory 2">
+    <img src="photo3.jpg" alt="Memory 3">
+    <img src="photo4.jpg" alt="Memory 4">
+    <img src="photo5.jpg" alt="Memory 5">
+    <img src="photo6.jpg" alt="Memory 6">
+    <img src="photo7.jpg" alt="Memory 7">
+    <img src="photo8.jpg" alt="Memory 8">
   </div>
   <button onclick="window.location.href='index.html'">Start Again</button>
   <script src="script.js"></script>
