--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday Countdown</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
@@ -12,19 +11,40 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: linear-gradient(270deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
+      background-size: 800% 800%;
       font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+      animation: gradientShift 15s ease infinite;
     }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .countdown {
-      font-size: 6rem;
+      font-size: 7rem;
       font-weight: bold;
       color: #fff;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      animation: pop 0.5s ease-in-out;
+      text-shadow: 0 0 20px #ff00ff, 0 0 40px #ff3399, 0 0 60px #ff66cc;
+      animation: glow 1s ease-in-out infinite alternate;
+      z-index: 2;
     }
-    @keyframes pop {
-      0% { transform: scale(0.5); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
+
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff3399; }
+      to { text-shadow: 0 0 30px #ff66cc, 0 0 60px #ff99ff; }
+    }
+
+    .fade-out {
+      animation: fadeOut 1s forwards;
+    }
+
+    @keyframes fadeOut {
+      from { opacity: 1; }
+      to { opacity: 0; }
     }
   </style>
 </head>
@@ -39,17 +59,47 @@
       count--;
       if (count >= 0) {
         countdownElement.textContent = count;
-        countdownElement.style.animation = "none";
-        void countdownElement.offsetWidth; // reset animation
-        countdownElement.style.animation = "pop 0.5s ease-in-out";
       }
       if (count < 0) {
         clearInterval(timer);
-        // Go to next page
-        window.location.href = "page2.html"; 
+        
+        // 🎉 Add confetti effect before redirect
+        launchConfetti();
+
+        countdownElement.textContent = "🎉 Happy Birthday! 🎂";
+        countdownElement.classList.add("fade-out");
+
+        setTimeout(() => {
+          window.location.href = "page2.html";
+        }, 3000); // wait 3s before redirect
       }
     }, 1000);
+
+    // Simple confetti burst
+    function launchConfetti() {
+      for (let i = 0; i < 100; i++) {
+        const confetti = document.createElement("div");
+        confetti.innerHTML = "🎉";
+        confetti.style.position = "fixed";
+        confetti.style.left = Math.random() * window.innerWidth + "px";
+        confetti.style.top = -50 + "px";
+        confetti.style.fontSize = "20px";
+        confetti.style.animation = "fall 3s linear forwards";
+        document.body.appendChild(confetti);
+
+        setTimeout(() => confetti.remove(), 3000);
+      }
+    }
+
+    const style = document.createElement("style");
+    style.innerHTML = `
+    @keyframes fall {
+      from { transform: translateY(0); opacity: 1; }
+      to { transform: translateY(100vh); opacity: 0; }
+    }`;
+    document.head.appendChild(style);
   </script>
+
   <script src="script.js"></script>
 </body>
 </html>
