--- a/page2.html
+++ b/page2.html
@@ -1,56 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: pink;
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-    }
-    .cake {
-      font-size: 5rem;
-      margin: 20px 0;
-    }
-    p {
-      font-size: 1.5rem;
-      color: white;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: #fff;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    button:hover {
-      background: #ff6b81;
-      color: white;
-    }
-  </style>
+  <title>Happy Birthday 🎂</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎉 Happy Birthday My Love ❤️ 🎉</h1>
-  <div class="cake">🎂</div>
-  <p>You are the beat of my heart<br>Many many happy returns of the day</p>
-  <button onclick="window.location.href='page3.html'">Click Here</button>
+  <section>
+    <h1>🎂 Happy Birthday My Love 🎂</h1>
+    <p>Wishing you endless happiness, smiles, and love today and always 💖</p>
+    <button onclick="window.location.href='page3.html'">Next ➡️</button>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
