--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,21 @@
   <meta charset="UTF-8">
   <title>Happy Birthday 🎂</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+  </style>
 </head>
 <body>
   <section>
