--- a/page3.html
+++ b/page3.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Dearest Love</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #ffe6f2;
+      font-family: 'Poppins', sans-serif;
+    }
+    .card {
+      max-width: 600px;
+      background: white;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      text-align: center;
+      animation: fadeIn 1s ease-in-out;
+    }
+    h2 {
+      color: #ff4d6d;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #333;
+      margin: 15px 0;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #ff4d6d;
+      border: none;
+      color: white;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #e6004c;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(30px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+  </style>
   <title>Birthday Note 💌</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="card">
+    <h2>My Dearest Love ❤️</h2>
   <section>
     <h2>💌 A Little Note</h2>
     <p>
+      Though my love for you is one-sided, it's pure and endless.<br>
+      I pray God grants you eternal happiness — even if it's not with me.<br>
+      Your rare replies pierce my heart, but I treasure our chats like gems.<br>
+      I'll keep loving you silently, asking only for your wellbeing in my prayers. 💌
       You are the most special person in my life.  
       On your birthday, I just want to remind you how much you mean to me 💕.  
       Every moment with you is a blessing ✨.
     </p>
+    <p>Forever Yours,<br>💖 [Your Name]</p>
+    <button onclick="window.location.href='page4.html'">Click Here</button>
+  </div>
     <button onclick="window.location.href='page4.html'">See Memories 📸</button>
   </section>
 
