--- a/page4.html
+++ b/page4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hall of Memories</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
@@ -12,18 +12,27 @@
       font-family: 'Poppins', sans-serif;
       background: #fff0f5;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
+
     h2 {
-      margin-bottom: 20px;
+      margin: 20px 0;
       color: #ff4d6d;
+      font-size: 2rem;
+      font-weight: bold;
     }
+
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 15px;
-      max-width: 800px;
-      margin: auto;
+      max-width: 900px;
+      width: 100%;
     }
+
     .gallery img {
       width: 100%;
       height: 200px;
@@ -32,9 +41,11 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.3s;
     }
+
     .gallery img:hover {
       transform: scale(1.05);
     }
+
     button {
       margin-top: 30px;
       padding: 12px 25px;
@@ -44,17 +55,18 @@
       border-radius: 25px;
       cursor: pointer;
       font-weight: bold;
+      font-size: 1rem;
       transition: 0.3s;
     }
+
     button:hover {
       background: #e6004c;
     }
   </style>
-  <title>Memories 📸</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>The Hall of Memories 💕</h2>
+
   <div class="gallery">
     <img src="photo1.jpg" alt="Memory 1">
     <img src="photo2.jpg" alt="Memory 2">
@@ -65,7 +77,9 @@
     <img src="photo7.jpg" alt="Memory 7">
     <img src="photo8.jpg" alt="Memory 8">
   </div>
-  <button onclick="window.location.href='index.html'">Start Again</button>
+
+  <button onclick="window.location.href='index.html'">🔄 Start Again</button>
+
   <script src="script.js"></script>
 </body>
 </html>
