--- a/page4.html
+++ b/page4.html
@@ -78,7 +78,7 @@
     <img src="photo8.jpg" alt="Memory 8">
   </div>
 
-  <button onclick="window.location.href='index.html'">🔄 Start Again</button>
+  <button onclick="window.location.href='page5.html'">🔄 At Last</button>
 
   <script src="script.js"></script>
 </body>
