--- a/page5.html
+++ b/page5.html
@@ -14,38 +14,35 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 100vh;
+      justify-content: center; /* ✅ EDITED: Center content vertically */
+      height: 100vh;           /* ✅ EDITED: Prevent scrolling */
+      overflow: hidden;        /* ✅ EDITED: Hide scrollbars */
     }
 
     h2 {
       color: #0077cc;
-      margin-bottom: 30px;
-      font-size: 2rem;
+      margin-bottom: 20px; /* ✅ EDITED: Reduced margin */
+      font-size: 1.8rem;   /* ✅ EDITED: Slightly smaller title */
     }
 
     .video-wrapper {
-      position: relative;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio */
-      height: 0;
-      width: 100%;
-      max-width: 800px;
+      width: 80%;               /* ✅ EDITED: Smaller width */
+      max-width: 480px;         /* ✅ EDITED: Limit width for small screens */
+      aspect-ratio: 16 / 9;     /* ✅ EDITED: Maintain 16:9 ratio */
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       border-radius: 10px;
       overflow: hidden;
     }
 
     .video-wrapper iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       border: 0;
     }
 
     button {
-      margin-top: 40px;
-      padding: 12px 25px;
+      margin-top: 25px;             /* ✅ EDITED: Reduced margin */
+      padding: 10px 20px;           /* ✅ EDITED: Smaller padding */
       background-color: #0077cc;
       color: white;
       border: none;
@@ -75,7 +72,7 @@
     </iframe>
   </div>
 
-  <button onclick="window.location.href='index.html'">⬅ Back to Home</button>
+  <button onclick="window.location.href='index.html'">🔁 Start Over</button> <!-- ✅ EDITED: Button text changed -->
 
 </body>
 </html>
