--- a/page5.html
+++ b/page5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Special Video Memory</title>
+  <title>Vertical Reel Video</title>
   <style>
     * {
       margin: 0;
@@ -13,7 +13,7 @@
 
     html, body {
       height: 100%;
-      overflow: hidden; /* ✅ Removes scrollbars */
+      overflow: hidden; /* ✅ Remove scroll */
       font-family: 'Poppins', sans-serif;
       background-color: #f0f8ff;
     }
@@ -22,26 +22,64 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* ✅ Perfect vertical centering */
-    }
-
-    h2 {
-      color: #0077cc;
-      margin-bottom: 20px;
-      font-size: 1.6rem;
+      justify-content: center; /* ✅ Vertically center everything */
       text-align: center;
     }
 
+    h2 {
+      font-size: 1.5rem;
+      color: #0077cc;
+      margin-bottom: 15px;
+    }
+
     .video-wrapper {
-      width: 300px;            /* ✅ Reel-style narrow video */
-      height: 533px;           /* ✅ 9:16 aspect ratio */
-      max-width: 90vw;
-      max-height: 90vh;
+      width: 270px;            /* ✅ Reel width */
+      height: 480px;           /* ✅ Reel height (9:16) */
+      background: #000;
       border-radius: 15px;
       overflow: hidden;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      background: #000;
     }
 
     .video-wrapper iframe {
-      width:
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #0077cc;
+      color: #fff;
+      border: none;
+      border-radius: 25px;
+      font-size: 1rem;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Special Video Memory 🎞️</h2>
+
+  <div class="video-wrapper">
+    <!-- ✅ Replace with your video embed link -->
+    <iframe
+      src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+      title="Reel Video"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <button onclick="window.location.href='index.html'">🔁 Start Over</button>
+
+</body>
+</html>
