--- a/page5.html
+++ b/page5.html
@@ -13,7 +13,7 @@
 
     html, body {
       height: 100%;
-      overflow: hidden; /* ✅ Remove scroll */
+      overflow: hidden; /* ✅ Removes scrollbars */
       font-family: 'Poppins', sans-serif;
       background-color: #f0f8ff;
     }
@@ -22,7 +22,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* ✅ Vertically center everything */
+      justify-content: center; /* ✅ Center everything vertically */
       text-align: center;
     }
 
@@ -33,17 +33,18 @@
     }
 
     .video-wrapper {
-      width: 270px;            /* ✅ Reel width */
-      height: 480px;           /* ✅ Reel height (9:16) */
+      width: 270px;        /* ✅ Instagram Reel-style width */
+      height: 480px;       /* ✅ 9:16 ratio */
       background: #000;
       border-radius: 15px;
       overflow: hidden;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
-    .video-wrapper iframe {
+    .video-wrapper video {
       width: 100%;
       height: 100%;
+      object-fit: cover; /* ✅ Ensures video fills box like a reel */
       border: none;
     }
 
@@ -70,13 +71,11 @@
   <h2>Special Video Memory 🎞️</h2>
 
   <div class="video-wrapper">
-    <!-- ✅ Replace with your video embed link -->
-    <iframe
-      src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-      title="Reel Video"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+    <!-- ✅ Replace 'my-video.mp4' with your video file name -->
+    <video controls autoplay muted loop>
+      <source src="video1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <button onclick="window.location.href='index.html'">🔁 Start Over</button>
