--- a/page2.html
+++ b/page2.html
@@ -10,13 +10,55 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      min-height: 100vh;
+      padding: 20px;
+      font-family: 'Poppins', sans-serif;
+      background-color: #fff0f5;
     }
+
     section {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       gap: 20px;
+      max-width: 90%;
+    }
+
+    h1 {
+      font-size: 8vw; /* ✅ Responsive heading size */
+      color: #ff4d6d;
+    }
+
+    p {
+      font-size: 5vw; /* ✅ Responsive paragraph size */
+      color: #333;
+    }
+
+    button {
+      padding: 12px 24px;
+      font-size: 1.2rem;
+      background-color: #ff4d6d;
+      color: white;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #e6004c;
+    }
+
+    /* ✅ Optional: Cap font size on larger screens */
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 48px;
+      }
+
+      p {
+        font-size: 24px;
+      }
     }
   </style>
 </head>
@@ -24,7 +66,7 @@
   <section>
     <h1>🎂 Happy Birthday My Love 🎂</h1>
     <p>Wishing you endless happiness, smiles, and love today and always 💖</p>
-    <button onclick="window.location.href='page3.html'">Next ➡️</button>
+    <button onclick="window.location.href='page3.html'">Next </button>
   </section>
 
   <script src="script.js"></script>
