--- a/page2.html
+++ b/page2.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Happy Birthday 🎂</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
       display: flex;
@@ -21,43 +20,62 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 20px;
+      gap: 25px;
       max-width: 90%;
     }
 
     h1 {
-      font-size: 8vw; /* ✅ Responsive heading size */
+      font-size: 3rem;
       color: #ff4d6d;
+      line-height: 1.1;
+      text-shadow: 0 0 4px rgba(255, 77, 109, 0.4);
     }
 
     p {
-      font-size: 5vw; /* ✅ Responsive paragraph size */
+      font-size: 1.75rem;
       color: #333;
+      max-width: 450px;
+      text-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 1.2rem;
+      padding: 14px 28px;
+      font-size: 1.5rem;
       background-color: #ff4d6d;
       color: white;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
+      transition: background-color 0.3s ease;
+      text-shadow: 0 0 3px rgba(255, 255, 255, 0.6);
     }
 
     button:hover {
       background-color: #e6004c;
     }
 
-    /* ✅ Optional: Cap font size on larger screens */
+    @media (min-width: 480px) {
+      h1 {
+        font-size: 4.5rem;
+      }
+      p {
+        font-size: 2.25rem;
+      }
+      button {
+        font-size: 1.75rem;
+      }
+    }
+
     @media (min-width: 768px) {
       h1 {
-        font-size: 48px;
+        font-size: 5.5rem;
       }
-
       p {
-        font-size: 24px;
+        font-size: 2.75rem;
+      }
+      button {
+        font-size: 2rem;
       }
     }
   </style>
@@ -66,9 +84,7 @@
   <section>
     <h1>🎂 Happy Birthday My Love 🎂</h1>
     <p>Wishing you endless happiness, smiles, and love today and always 💖</p>
-    <button onclick="window.location.href='page3.html'">Next </button>
+    <button onclick="window.location.href='page3.html'">Next ➡️</button>
   </section>
-
-  <script src="script.js"></script>
 </body>
 </html>
