--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Happy Birthday 🎂</title>
   <style>
+    /* Paste updated CSS here */
     body {
       display: flex;
       justify-content: center;
@@ -20,63 +21,56 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 25px;
+      gap: 20px;
       max-width: 90%;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       color: #ff4d6d;
       line-height: 1.1;
-      text-shadow: 0 0 4px rgba(255, 77, 109, 0.4);
     }
 
     p {
-      font-size: 1.75rem;
+      font-size: 1.25rem;
       color: #333;
-      max-width: 450px;
-      text-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-    }
-
-    button {
-      padding: 14px 28px;
-      font-size: 1.5rem;
-      background-color: #ff4d6d;
-      color: white;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      text-shadow: 0 0 3px rgba(255, 255, 255, 0.6);
-    }
-
-    button:hover {
-      background-color: #e6004c;
+      max-width: 400px;
     }
 
     @media (min-width: 480px) {
       h1 {
-        font-size: 4.5rem;
+        font-size: 3.5rem;
       }
+
       p {
-        font-size: 2.25rem;
-      }
-      button {
-        font-size: 1.75rem;
+        font-size: 1.5rem;
       }
     }
 
     @media (min-width: 768px) {
       h1 {
-        font-size: 5.5rem;
+        font-size: 4.5rem;
       }
+
       p {
-        font-size: 2.75rem;
+        font-size: 1.75rem;
       }
-      button {
-        font-size: 2rem;
-      }
+    }
+
+    button {
+      padding: 12px 24px;
+      font-size: 1.2rem;
+      background-color: #ff4d6d;
+      color: white;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #e6004c;
     }
   </style>
 </head>
