--- a/page2.html
+++ b/page2.html
@@ -26,16 +26,14 @@
     }
 
     h1 {
-    font-size: 8vw; /* Responsive heading size */
-    color: #ff4d6d;
-    -webkit-text-stroke: 1.5px black; /* black border */
-    text-stroke: 1.5px black; /* for some browsers */
-    text-shadow:
-      1px 1px 0 black,
-     -1px 1px 0 black,
-      1px -1px 0 black,
-     -1px -1px 0 black; /* fallback shadow */
-  }
+  font-size: 8vw;
+  color: #ff4d6d;
+  -webkit-text-stroke: 1px black; /* black border */
+  text-stroke: 1px black;
+  text-shadow:
+    2px 2px 4px rgba(0, 0, 0, 0.6),
+    -2px -2px 4px rgba(0, 0, 0, 0.6);
+}
 
     p {
       font-size: 5vw; /* ✅ Responsive paragraph size */
