--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
       }
 
       p {
-        font-size: 24px;
+        font-size: 35px;
       }
     }
   </style>
@@ -70,7 +70,7 @@
 <body>
   <section>
     <h1>🎂 Happy Birthday My Love 🎂</h1>
-    <h1>Wishing you endless happiness, smiles <br> and love today and always 💖</h1>
+    <p>Wishing you endless happiness, smiles <br> and love today and always 💖</p>
     <button onclick="window.location.href='page3.html'">Next </button>
   </section>
 
