--- a/page2.html
+++ b/page2.html
@@ -70,7 +70,7 @@
 <body>
   <section>
     <h1>🎂 Happy Birthday My Love 🎂</h1>
-    <p>Wishing you endless happiness, smiles <br> and love today and always 💖</p>
+    <h2>Wishing you endless happiness, smiles <br> and love today and always 💖</h2>
     <button onclick="window.location.href='page3.html'">Next </button>
   </section>
 
