--- a/page2.html
+++ b/page2.html
@@ -40,6 +40,10 @@
       color: #333;
     }
 
+    h2 {
+      font-size: 8vw; /* ✅ Responsive paragraph size */
+    }
+
     button {
       padding: 20px 40px;
       font-size: 1.6rem;
