--- a/page4.html
+++ b/page4.html
@@ -6,62 +6,90 @@
   <title>Hall of Memories</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: 'Poppins', sans-serif;
-      background: #fff0f5;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-    }
+    /* Box sizing */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
-    h2 {
-      margin: 20px 0;
-      color: #ff4d6d;
-      font-size: 2rem;
-      font-weight: bold;
-    }
+body {
+  margin: 0;
+  padding: 20px;
+  font-family: 'Poppins', sans-serif;
+  background: #fff0f5;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  overflow-y: auto;  /* Allow vertical scrolling if needed */
+}
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 15px;
-      max-width: 900px;
-      width: 100%;
-    }
+/* Responsive heading */
+h2 {
+  margin: 20px 0;
+  color: #ff4d6d;
+  font-size: 6vw;  /* Smaller but responsive */
+  font-weight: bold;
+  max-width: 90%;
+}
 
-    .gallery img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
+/* Responsive gallery images */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); /* smaller min width */
+  gap: 15px;
+  max-width: 900px;
+  width: 100%;
+}
 
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
+.gallery img {
+  width: 100%;
+  height: 150px;  /* reduce height on mobile */
+  object-fit: cover;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  transition: transform 0.3s;
+}
 
-    button {
-      margin-top: 30px;
-      padding: 12px 25px;
-      background: #ff4d6d;
-      border: none;
-      color: white;
-      border-radius: 25px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 1rem;
-      transition: 0.3s;
-    }
+.gallery img:hover {
+  transform: scale(1.05);
+}
 
-    button:hover {
-      background: #e6004c;
-    }
+/* Responsive button */
+button {
+  margin: 30px 0 50px 0;  /* add bottom margin */
+  padding: 14px 30px;
+  background: #ff4d6d;
+  border: none;
+  color: white;
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem; /* slightly bigger for touch */
+  transition: 0.3s;
+  max-width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+button:hover {
+  background: #e6004c;
+}
+
+/* Optional: cap font sizes on wider screens */
+@media (min-width: 768px) {
+  h2 {
+    font-size: 2rem;
+  }
+  .gallery img {
+    height: 200px;
+  }
+  button {
+    font-size: 1rem;
+    max-width: none;
+  }
+}
   </style>
 </head>
 <body>
