--- a/page4.html
+++ b/page4.html
@@ -1,113 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hall of Memories</title>
-  <link rel="stylesheet" href="style.css">
   <style>
-    /* Box sizing */
-*, *::before, *::after {
-  box-sizing: border-box;
-}
+    /* Reset box-sizing */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
 
-body {
-  margin: 0;
-  padding: 20px;
-  font-family: 'Poppins', sans-serif;
-  background: #fff0f5;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-  overflow-y: auto;  /* Allow vertical scrolling if needed */
-}
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: 'Poppins', sans-serif;
+      background: #fff0f5;
+      text-align: center;
+      display: block; /* changed from flex to block for better scrolling */
+      min-height: 100vh;
+      overflow-y: auto; /* allow scrolling */
+      color: #ff4d6d;
+    }
 
-/* Responsive heading */
-h2 {
-  margin: 20px 0;
-  color: #ff4d6d;
-  font-size: 6vw;  /* Smaller but responsive */
-  font-weight: bold;
-  max-width: 90%;
-}
+    h2 {
+      margin: 20px 0;
+      font-size: 6vw;
+      font-weight: bold;
+      max-width: 90%;
+      line-height: 1.2;
+    }
 
-/* Responsive gallery images */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); /* smaller min width */
-  gap: 15px;
-  max-width: 900px;
-  width: 100%;
-}
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto;
+    }
 
-.gallery img {
-  width: 100%;
-  height: 150px;  /* reduce height on mobile */
-  object-fit: cover;
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  transition: transform 0.3s;
-}
+    .gallery img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s;
+      cursor: pointer;
+    }
 
-.gallery img:hover {
-  transform: scale(1.05);
-}
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
 
-/* Responsive button */
-button {
-  margin: 30px 0 50px 0;  /* add bottom margin */
-  padding: 14px 30px;
-  background: #ff4d6d;
-  border: none;
-  color: white;
-  border-radius: 25px;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 1.2rem; /* slightly bigger for touch */
-  transition: 0.3s;
-  max-width: 90%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+    button {
+      display: block;
+      margin: 40px auto 30px auto;
+      padding: 14px 30px;
+      background: #ff4d6d;
+      border: none;
+      color: white;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1.3rem;
+      max-width: 90%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      transition: 0.3s;
+    }
 
-button:hover {
-  background: #e6004c;
-}
+    button:hover {
+      background: #e6004c;
+    }
 
-/* Optional: cap font sizes on wider screens */
-@media (min-width: 768px) {
-  h2 {
-    font-size: 2rem;
-  }
-  .gallery img {
-    height: 200px;
-  }
-  button {
-    font-size: 1rem;
-    max-width: none;
-  }
-}
+    /* Lightbox Styles */
+    #lightbox {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      cursor: pointer;
+      padding: 10px;
+    }
+
+    #lightbox img {
+      max-width: 90vw;
+      max-height: 90vh;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(255, 77, 109, 0.8);
+      object-fit: contain;
+    }
+
+    /* Responsive caps */
+    @media (min-width: 768px) {
+      h2 {
+        font-size: 2rem;
+      }
+
+      .gallery img {
+        height: 200px;
+      }
+
+      button {
+        font-size: 1rem;
+        max-width: none;
+      }
+    }
   </style>
 </head>
 <body>
   <h2>The Hall of Memories 💕</h2>
 
   <div class="gallery">
-    <img src="photo1.jpg" alt="Memory 1">
-    <img src="photo2.jpg" alt="Memory 2">
-    <img src="photo3.jpg" alt="Memory 3">
-    <img src="photo4.jpg" alt="Memory 4">
-    <img src="photo5.jpg" alt="Memory 5">
-    <img src="photo6.jpg" alt="Memory 6">
-    <img src="photo7.jpg" alt="Memory 7">
-    <img src="photo8.jpg" alt="Memory 8">
+    <img src="photo1.jpg" alt="Memory 1" />
+    <img src="photo2.jpg" alt="Memory 2" />
+    <img src="photo3.jpg" alt="Memory 3" />
+    <img src="photo4.jpg" alt="Memory 4" />
+    <img src="photo5.jpg" alt="Memory 5" />
+    <img src="photo6.jpg" alt="Memory 6" />
+    <img src="photo7.jpg" alt="Memory 7" />
+    <img src="photo8.jpg" alt="Memory 8" />
   </div>
 
   <button onclick="window.location.href='page5.html'">🔄 At Last</button>
 
-  <script src="script.js"></script>
+  <!-- Lightbox container -->
+  <div id="lightbox" onclick="hideLightbox()">
+    <img src="" alt="Expanded Memory" id="lightbox-img" />
+  </div>
+
+  <script>
+    // Lightbox logic
+    const galleryImages = document.querySelectorAll('.gallery img');
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+
+    galleryImages.forEach(img => {
+      img.addEventListener('click', () => {
+        lightbox.style.display = 'flex';
+        lightboxImg.src = img.src;
+        lightboxImg.alt = img.alt;
+      });
+    });
+
+    function hideLightbox() {
+      lightbox.style.display = 'none';
+      lightboxImg.src = '';
+      lightboxImg.alt = '';
+    }
+
+    // Optional: Close lightbox on Escape key
+    document.addEventListener('keydown', (e) => {
+      if(e.key === 'Escape' && lightbox.style.display === 'flex') {
+        hideLightbox();
+      }
+    });
+  </script>
 </body>
 </html>
