--- a/page4.html
+++ b/page4.html
@@ -125,6 +125,8 @@
     <img src="photo6.jpg" alt="Memory 6" />
     <img src="photo7.jpg" alt="Memory 7" />
     <img src="photo8.jpg" alt="Memory 8" />
+    <img src="photo11.jpg" alt="Memory 9" />
+    <img src="photo12.jpg" alt="Memory 10" />
   </div>
 
   <button onclick="window.location.href='page5.html'">🔄 At Last</button>
