--- a/page5.html
+++ b/page5.html
@@ -30,6 +30,11 @@
       font-size: 1.5rem;
       color: #0077cc;
       margin-bottom: 15px;
+      -webkit-text-stroke: 1px black; /* black border */
+      text-stroke: 1px black;
+      text-shadow:
+        4px 4px 8px rgba(0, 0, 0, 0.6),
+        -2px -2px 8px rgba(0, 0, 0, 0.6);
     }
 
     .video-wrapper {
@@ -78,7 +83,7 @@
     </video>
   </div>
 
-  <button onclick="window.location.href='index.html'">🔁 Start Over</button>
+  <button onclick="window.location.href='index.html'">Start Over</button>
 
 </body>
 </html>
