--- a/page5.html
+++ b/page5.html
@@ -56,7 +56,7 @@
     button {
       margin-top: 20px;
       padding: 10px 20px;
-      background-color: #0077cc;
+      background-color: #ff4d6d;
       color: #fff;
       border: none;
       border-radius: 25px;
