--- a/page5.html
+++ b/page5.html
@@ -28,7 +28,7 @@
 
     h2 {
       font-size: 1.5rem;
-      color: #0077cc;
+      color: #ff4d6d;
       margin-bottom: 15px;
       -webkit-text-stroke: 1px black; /* black border */
       text-stroke: 1px black;
