--- a/page3.html
+++ b/page3.html
@@ -80,6 +80,11 @@
       }
       h2 {
         font-size: 2rem;
+        -webkit-text-stroke: 1px black; /* black border */
+        text-stroke: 1px black;
+        text-shadow:
+          4px 4px 8px rgba(0, 0, 0, 0.6),
+          -2px -2px 8px rgba(0, 0, 0, 0.6);
       }
       section h2 {
         font-size: 1.5rem;
