--- a/page2.html
+++ b/page2.html
@@ -45,18 +45,22 @@
     }
 
     button {
-      padding: 20px 40px;
-      font-size: 1.6rem;
-      background-color: #ff4d6d;
-      color: white;
+      margin-top: 15px;
+      padding: 14px 30px;
+      background: #ff4d6d;
       border: none;
+      color: white;
       border-radius: 25px;
       cursor: pointer;
       font-weight: bold;
+      font-size: 1.2rem;
+      transition: background-color 0.3s ease;
+      width: 100%;
+      max-width: 300px;
     }
 
     button:hover {
-      background-color: #e6004c;
+      background: #e6004c;
     }
 
     /* ✅ Optional: Cap font size on larger screens */
