--- a/page2.html
+++ b/page2.html
@@ -25,17 +25,15 @@
       max-width: 90%;
     }
 
-   h1 {
-        font-size: 2rem;
-        -webkit-text-stroke: 1px black; /* black border */
-        text-stroke: 1px black;
-        text-shadow:
-          4px 4px 8px rgba(0, 0, 0, 0.6),
-          -2px -2px 8px rgba(0, 0, 0, 0.6);
-      }
-      section h1 {
-        font-size: 1.5rem;
-      }
+    h1 {
+  font-size: 18vw;
+  color: #ff4d6d;
+  -webkit-text-stroke: 1px black; /* black border */
+  text-stroke: 1px black;
+  text-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.6),
+    -2px -2px 8px rgba(0, 0, 0, 0.6);
+}
 
     p {
       font-size: 5vw; /* ✅ Responsive paragraph size */
