--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="countdown" style="font-size:6rem; font-weight:bold; color:#fff;">10</div>
-  <audio id="background-audio" src="https://github.dev/AK02-git/HBD-Bacha-site/blob/main/audio1.mp3" autoplay loop controls></audio>
+  <audio id="background-audio" src="https://raw.githubusercontent.com/AK02-git/HBD-Bacha-site/main/audio1.mp3" autoplay loop controls></audio>
   <script>
     let count = 10;
     const countdownElement = document.getElementById("countdown");
