--- a/page4.html
+++ b/page4.html
@@ -120,6 +120,10 @@
   </style>
 </head>
 <body>
+  <audio id="bg-music" autoplay loop>
+  <source src="audio1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <center><h2>The Hall of Memories 💕</h2></center>
 
   <div class="gallery">
