--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <!-- Start Screen -->
   <div id="startScreen">
-    <img id="teddy" src="teddy.png" alt="Tap Teddy"> <!-- Apna teddy image -->
+    <img id="teddy" src="teddy1.png" alt="Tap Teddy"> <!-- Apna teddy image -->
     <div id="tapText">💖 Tap Here 💖</div>
   </div>
 
